--- a/index.html
+++ b/index.html
@@ -12,6 +12,29 @@
   <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-  
+  <header class="container">
+    <nav id="primary" class="grid grid-flow-col">
+      <div>
+        <img src="assests/svg/List.svg" alt="Menu">
+        <strong>Menu</strong>
+      </div>
+      <div>
+        <img src="assests/svg/Logo.svg" alt="Technews Logo">
+      </div>
+      <div>
+        <strong>Buscar</strong>
+        <img src="assests/svg/MagnifyingGlass.svg" alt="Lupa Pesquisa">
+      </div>
+    </nav>
+    <nav id="secondary" class="grid grid-flow-col">
+      <a href="#">Inteligência Artificial</a>
+      <a href="#"> Blockchain</a>
+      <a href="#"> Hologramas</a>
+      <a href="#"> Internet</a>
+      <a href="#"> Vestíveis</a>
+      <a href="#"> Realidade Aumentada</a>
+      <a href="#"> Realidade  Virtual</a>
+    </nav>
+  </header>
 </body>
 </html>
