--- a/index.html
+++ b/index.html
@@ -36,5 +36,19 @@
       <a href="#"> Realidade  Virtual</a>
     </nav>
   </header>
+  <main class="gird container">
+    <section id="featured" class="grid grid-flow-col gap-16">
+      <div>
+        <img src="assests/image/Image 01.png" alt="">
+      </div>
+      <div class="grid grid-col-2 gap-16">
+        <img src="assests/image/Image 02.png" alt="">
+        <img src="assests/image/Image 03.png" alt="">
+        <img src="assests/image/Image 04.png" alt="">
+        <img src="assests/image/Image 05.png" alt="">
+
+      </div>
+    </section>
+  </main>
 </body>
 </html>
