--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </header>
   <main class="gird container">
     <section id="featured" class="grid grid-flow-col gap-16">
-      <div>
+      <div class="card">
         <img src="assests/image/Image 01.png" alt="">
       </div>
       <div class="grid grid-col-2 gap-16">
