--- a/index.html
+++ b/index.html
@@ -38,15 +38,18 @@
   </header>
   <main class="gird container">
     <section id="featured" class="grid grid-flow-col gap-16">
-      <div class="card">
+      <figure class="card">
         <img src="assests/image/Image 01.png" alt="">
-      </div>
-      <div class="grid grid-col-2 gap-16">
+        <figcaption>
+          <span class="content-tag">Robótica</span>
+          <h2 class="text-2xl">Robôs domésticos começam a ser adotados para tarefas diárias, prometendo mais conforto e eficiência nas residências.</h2>
+        </figcaption>
+      </figure>
+      <div class="grid grid-col-2 gap-16 card">
         <img src="assests/image/Image 02.png" alt="">
         <img src="assests/image/Image 03.png" alt="">
         <img src="assests/image/Image 04.png" alt="">
         <img src="assests/image/Image 05.png" alt="">
-
       </div>
     </section>
   </main>
